Lesson 4 final commit

--- a/lesson4_assignment/author.html
+++ b/lesson4_assignment/author.html
@@ -16,7 +16,7 @@
         <p><i>Josh Petree</i></p>
         <img src = "images/author.jpg" alt = "The author, Josh Petree" width = "600" height = "400">
         
-        <p>Josh Petree is a freshman at Florida State University who is currently in the IT program, who created this page to gain a broader knowledge
+        <p>Josh Petree is a freshman at Florida State University who is currently in the IT program, creating this page to gain a broader knowledge
         of databases, a prominent area in the IT career field.</p>
         
         <h3><em>References</em></h3>
