lesson 4 final final commit

--- a/lesson4_assignment/index.html
+++ b/lesson4_assignment/index.html
@@ -9,7 +9,7 @@
         <meta name="author" content="Josh Petree">
     </head>
     <body>
-        <img src = "images/business-cabinet-data.jpg" alt = "Database center">
+        <img src = "images/business-cabinet-data.jpg" alt = "Database center" width = "100%">
         <h1>Benefits of Database Use</h1>
         <p><a href = "index.html">Overview</a> | <a href = "media.html">Media</a> | <a href = "author.html">Author</a></p>
         <h2><em>An Overview</em></h2>
