--- a/lesson4_assignment/author.html
+++ b/lesson4_assignment/author.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- Name: Josh Petree    Date of Completion: 02/10/19-->
+        <!-- Name: Josh Petree    Date of Completion: 03/04/19-->
         <meta charset="UTF-8">
         <title>Benefits of Database Use</title>
         <meta name="description" content="An observation of the benefits of databases and how they help us with our daily tasks">
@@ -9,7 +9,7 @@
         <meta name="author" content="Josh Petree">
     </head>
     <body>
-        <img src = "images/business-cabinet-data.jpg" alt = "Database center">
+        <img src = "images/business-cabinet-data.jpg" alt = "Database center" width = "100%">
         <h1>Benefits of Database Use</h1>
         <p><a href = "index.html">Overview</a> | <a href = "media.html">Media</a> | <a href = "author.html">Author</a></p>
         <h2><em>About the Author</em></h2>
@@ -20,9 +20,9 @@
         of databases, a prominent area in the IT career field.</p>
         
         <h3><em>References</em></h3>
-        <p>Database Definition</p>
+        <a href = "https://www.techopedia.com/definition/1185/database-db" target = "_blank">Database Definition</a>
         <ul>
-            <li>Techopedia: <a href = "https://www.techopedia.com/definition/1185/database-db" target = "_blank">Database</a></li>
+            <li>Publication: Techopedia</li>
         </ul>
         <p>Title: <a href = "https://www.ringlead.com/blog/the-benefits-of-using-database-management-systems/" target = "_blank">
             The Benefit of Using Database Management Systems</a></p>
@@ -30,9 +30,9 @@
             <li>Publication: RingLead</li>
             <li>Date: June 14, 2018</li>
         </ul>
-        <p>Database Job Title Salaries</p>
+        <a href = "https://www.glassdoor.com/Salaries/database-administrator-salary-SRCH_KO0,22.htm" target = "_blank">Database Job Title Salaries</a>
         <ul>
-            <li>Glassdoor: <a href = "https://www.glassdoor.com/Salaries/database-administrator-salary-SRCH_KO0,22.htm" target = "_blank">Salaries</a></li>
+            <li>Publication: Glassdoor</li>
         </ul>
         <p>Title: <a href = "https://www.brainyquote.com/topics/database" target = "_blank">Database Quotes</a></p>
         <ul>
