--- a/lesson4_assignment/media.html
+++ b/lesson4_assignment/media.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- Name: Josh Petree    Date of Completion: 02/10/19-->
+        <!-- Name: Josh Petree    Date of Completion: 03/04/19-->
         <meta charset="UTF-8">
         <title>Benefits of Database Use</title>
         <meta name="description" content="An observation of the benefits of databases and how they help us with our daily tasks">
@@ -9,13 +9,13 @@
         <meta name="author" content="Josh Petree">
     </head>
     <body>
-        <img src = "images/business-cabinet-data.jpg" alt = "Database center">
+        <img src = "images/business-cabinet-data.jpg" alt = "Database center" width = "100%">
         <h1>Benefits of Database Use</h1>
         <p><a href = "index.html">Overview</a> | <a href = "media.html">Media</a> | <a href = "author.html">Author</a></p>
         <h2><em>Media</em></h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/djEZeF4KTaM" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+        <hr>
         <p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License"
         style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><i>
         <a href = "mailto:jip18@my.fsu.edu">Josh Petree</a></i></p>
