lesson 5 final commit

--- a/lesson5_assignment/author.html
+++ b/lesson5_assignment/author.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- Name: Josh Petree    Date of Completion: 03/04/19-->
+        <!-- Name: Josh Petree    Date of Completion: 03/21/19-->
         <meta charset="UTF-8">
         <title>Benefits of Database Use</title>
         <meta name="description" content="An observation of the benefits of databases and how they help us with our daily tasks">
         <meta name="keywords" content="databases, benefits, daily tasks">
         <meta name="author" content="Josh Petree">
+        <link href = "style.css" rel = "stylesheet" type = "text/css">
     </head>
     <body>
         <img src = "images/business-cabinet-data.jpg" alt = "Database center" width = "100%">
@@ -38,6 +39,18 @@
         <ul>
             <li>Publication: BrainyQuote</li>
         </ul>
+        <hr>
+        <table width="200">
+          <tbody><tr>
+            <td bgcolor="#FFFBE5">&nbsp;</td>
+            <td bgcolor="#999687">&nbsp;</td>
+            <td bgcolor="#FFCF7B">&nbsp;</td>
+            <td bgcolor="#BBECFF">&nbsp;</td>
+            <td bgcolor="#4ECBCC">&nbsp;</td>
+          </tr>
+        </tbody>
+        </table>
+        <p>This palette uses the "Compound" color rule to create soft colors that have a more friendly and inviting feeling.</p>
         <hr>
         <p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License"
         style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><i>
