--- a/lesson5_assignment/index.html
+++ b/lesson5_assignment/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- Name: Josh Petree    Date of Completion: 03/04/19-->
+        <!-- Name: Josh Petree    Date of Completion: 03/21/19-->
         <meta charset="UTF-8">
         <title>Benefits of Database Use</title>
         <meta name="description" content="An observation of the benefits of databases and how they help us with our daily tasks">
         <meta name="keywords" content="databases, benefits, daily tasks">
         <meta name="author" content="Josh Petree">
+        <link href = "style.css" rel = "stylesheet" type = "text/css">
     </head>
     <body>
         <img src = "images/business-cabinet-data.jpg" alt = "Database center" width = "100%">
@@ -51,30 +52,30 @@
         <h2><em>Average Salaries for Database Related Job Titles</em></h2>
             <img src = "images/adult-business-computer.jpg" alt = "Woman on laptop next to database hub" width = "400" height = "267">
             <br></br>
-        <table border = "1" cellpadding = "12" cellspacing = "0">
+        <table>
             <tr>
                 <th>Database Analyst</th>
-                <td>$67,000</td>
+                <td class = "stats">$67,000</td>
             </tr>
             <tr>
                 <th>Database Manager</th>
-                <td>$74,000</td>
+                <td class = "stats">$74,000</td>
             </tr>
             <tr>
                 <th>Database Administrator</th>
-                <td>$80,683</td>
+                <td class = "stats">$80,683</td>
             </tr>
             <tr>
                 <th>SQL Database Administrator</th>
-                <td>$81,000</td>
+                <td class = "stats">$81,000</td>
             </tr>
             <tr>
                 <th>DBA</th>
-                <td>$94,000</td>
+                <td class = "stats">$94,000</td>
             </tr>
             <tr>
                 <th>Senior Database Administrator</th>
-                <td>$99,000</td>
+                <td class = "stats">$99,000</td>
             </tr>
         </table>
         <hr>
