--- a/lesson5_assignment/media.html
+++ b/lesson5_assignment/media.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- Name: Josh Petree    Date of Completion: 03/04/19-->
+        <!-- Name: Josh Petree    Date of Completion: 03/21/19-->
         <meta charset="UTF-8">
         <title>Benefits of Database Use</title>
         <meta name="description" content="An observation of the benefits of databases and how they help us with our daily tasks">
         <meta name="keywords" content="databases, benefits, daily tasks">
         <meta name="author" content="Josh Petree">
+        <link href = "style.css" rel = "stylesheet" type = "text/css">
     </head>
     <body>
         <img src = "images/business-cabinet-data.jpg" alt = "Database center" width = "100%">
