Project 2 first commit

--- a/lesson7_project_1/author.html
+++ b/lesson7_project_1/author.html
@@ -8,13 +8,20 @@
         <meta name="keywords" content="databases, benefits, daily tasks">
         <meta name="author" content="Josh Petree">
         <link href = "style.css" rel = "stylesheet" type = "text/css">
+        <link href = "style-navbar.css" rel = "stylesheet" type = "text/css">
     </head>
     <body>
         <div class = "container">
             <div id = "header">
                 <img src = "images/business-cabinet-data.jpg" alt = "Database center" width = "100%">
                 <h1>Benefits of Database Use</h1>
-                <p><a href = "index.html">Overview</a> | <a href = "media.html">Media</a> | <a href = "author.html">Author</a></p>
+                <div id = "navbar">
+                    <ul id = "menu">
+                        <li><a href = "index.html" class = "button">Overview</a></li>
+                        <li><a href = "media.html" class = "button">Media</a></li>
+                        <li><a href = "author.html" class = "button selected">Author</a></li>
+                    </ul>
+                </div>
             </div><!--end header-->
             <div id = "content">
                 <h2><em>About the Author</em></h2>
